UI onbording custom

--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -2,6 +2,31 @@
   "English": "English",
   "VietNam": "VietNam",
   "soCool": "SoCool",
+  "EN": "EN",
+  "VN": "VN",
   "placeHolderMessage": "Type your message...",
-  "send": "send" 
+  "send": "send",
+  "chooseHere": "Choose here",
+  "sellSomething": "Sell something",
+  "buySomething": "Buy something",
+  "callToAction": "Call to Action",
+  "questionHelp": "What do you want me to help ?",
+  "questionSell": "Which product do you want to sell ?",
+  "questionBuy": "Which product do you want to buy ?",
+  "questionPrice": "Which price are you happy with ?",
+  "questionCriteriaBuy":"Do you have any criteria for buyers that I need to pay attention to? please list out",
+  "questionCriteriaSell": "Do you have any seller criteria I should pay attention to? Please list them out",
+  "writeSomethingHere": "Write something here ?",
+  "writeNumberHere": "Write number here ?",
+  "inputEmailAddress": "Please input your email address to receive your custom link!",
+  "emailHere": "your email here",
+  "sureInformation": "Are you sure 100% with information you input ?",
+  "yesOrNo": "Yes or No",
+  "frequentEmail": "Please use your frequent email address to receive the result of the successful negotiation!",
+  "thankForUsing": "Thank you for using SoCool.ai",
+  "pleaseCheckMail": "Please check your email for your custom link",
+  "bestOfLuck": "Wish you the best of luck",
+  "errorValidEmail": "Please enter a valid email address",
+  "generateLink": "Generate a link for me!",
+  "confirm": "Confirm" 
 }
