--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -2,7 +2,31 @@
   "English": "Tiếng Anh",
   "VietNam": "Tiếng VIệt",
   "soCool": "SoCool",
+  "EN": "EN",
+  "VN": "VN",
   "placeHolderMessage": "Nhập tin nhắn của bạn...",
-  "send": "gửi" 
-
+  "send": "gửi",
+  "chooseHere": "Chọn ở đây",
+  "sellSomething": "Bán một số thứ",
+  "buySomething": "Mua một số thứ",
+  "callToAction": "Kêu gọi hành động",
+  "questionHelp": "Tôi có thể giúp gì được cho bạn ?",
+  "questionSell": "Bạn muốn bán sản phẩm nào ?",
+  "questionBuy": "Bạn muốn mua sản phẩm nào ?",
+  "questionPrice": "Bạn hài lòng với mức giá nào ?",
+  "questionCriteriaBuy":"Bạn có tiêu chí nào về người mua mà tôi cần chú ý không ? hãy liệt kê ra",
+  "questionCriteriaSell": "Bạn có tiêu chí nào về người bán mà tôi cần chú ý không? hãy liệt kê ra",
+  "writeSomethingHere": "Hãy nhập gì đó ở đây ?",
+  "writeNumberHere": "Hãy nhập số ở đây ?",
+  "inputEmailAddress": "Hãy nhập địa chỉ email của bạn để nhận liên kết!",
+  "emailHere": "Hãy nhập email của bạn ở đây",
+  "sureInformation": "Bạn có chắc chắn 100% với thông tin bạn nhập vào không ?",
+  "yesOrNo": "Có hoặc Không",
+  "frequentEmail": "Vui lòng sử dụng địa chỉ email thường xuyên của bạn để nhận kết quả đàm phán thành công!",
+  "thankForUsing": "Cảm ơn bạn đã sử dụng SoCool.ai",
+  "pleaseCheckMail": "Vui lòng kiểm tra email để biết liên kết tùy chỉnh của bạn",
+  "bestOfLuck": "Chúc bạn may mắn",
+  "errorValidEmail": "Vui lòng nhập địa chỉ email hợp lệ",
+  "generateLink": "Tạo liên kết cho tôi!",
+  "confirm": "Xác nhận"
 }
