--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -40,5 +40,7 @@
   "criteria": "Tiêu chí",
   "yourEmail": "Email của bạn",
   "alertCheckMail": "Bạn đã tạo link thành công, vui lòng kiểm tra lại email",
-  "time": "Thời gian:"
+  "time": "Thời gian:",
+  "404NotFound": "Xin lỗi, trang bạn đang tìm kiếm không tồn tại.",
+  "goBackHome": "Quay lại trang chủ"
 }
