reposive onbording ui and change token set setsionStorage

--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -5,19 +5,19 @@
   "EN": "EN",
   "VN": "VN",
   "placeHolderMessage": "Nhập tin nhắn của bạn...",
-  "send": "gửi",
+  "send": "Gửi",
   "chooseHere": "Chọn ở đây",
   "sellSomething": "Bán một số thứ",
   "buySomething": "Mua một số thứ",
   "callToAction": "Kêu gọi hành động",
-  "questionHelp": "Tôi có thể giúp gì được cho bạn ?",
-  "questionSell": "Bạn muốn bán sản phẩm nào ?",
-  "questionBuy": "Bạn muốn mua sản phẩm nào ?",
-  "questionPrice": "Bạn hài lòng với mức giá nào ?",
+  "questionHelp": "Tôi có thể giúp gì được cho bạn?",
+  "questionSell": "Bạn muốn bán sản phẩm nào?",
+  "questionBuy": "Bạn muốn mua sản phẩm nào?",
+  "questionPrice": "Bạn hài lòng với mức giá nào?",
   "questionCriteriaBuy":"Bạn có tiêu chí nào về người mua mà tôi cần chú ý không ? hãy liệt kê ra",
   "questionCriteriaSell": "Bạn có tiêu chí nào về người bán mà tôi cần chú ý không? hãy liệt kê ra",
   "writeSomethingHere": "Hãy nhập gì đó ở đây ?",
-  "writeNumberHere": "Hãy nhập số ở đây ?",
+  "writeNumberHere": "Hãy nhập số ở đây?",
   "inputEmailAddress": "Hãy nhập địa chỉ email của bạn để nhận liên kết!",
   "emailHere": "Hãy nhập email của bạn ở đây",
   "sureInformation": "Bạn có chắc chắn 100% với thông tin bạn nhập vào không ?",
