implement api chat and ui countdown

--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -42,5 +42,6 @@
   "alertCheckMail": "Bạn đã tạo link thành công, vui lòng kiểm tra lại email",
   "time": "Thời gian:",
   "404NotFound": "Xin lỗi, trang bạn đang tìm kiếm không tồn tại.",
-  "goBackHome": "Quay lại trang chủ"
+  "goBackHome": "Quay lại trang chủ",
+  "oneMinute": "Bạn còn một phút để nói chuyện với tôi!"
 }
