--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -42,5 +42,6 @@
   "alertCheckMail": "You have successfully created the link, please check your email again",
   "time": "Time:",
   "404NotFound": "Sorry, the page you are looking for does not exist.",
-  "goBackHome": "Go back to the home page"
+  "goBackHome": "Go back to the home page",
+  "oneMinute": "You have one minute left to talk to me!"
 }
