--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -43,5 +43,6 @@
   "time": "Thời gian:",
   "404NotFound": "Xin lỗi, trang bạn đang tìm kiếm không tồn tại.",
   "goBackHome": "Quay lại trang chủ",
-  "oneMinute": "Bạn còn một phút để nói chuyện với tôi!"
+  "oneMinute": "Bạn còn một phút để nói chuyện với tôi!",
+  "enterPrice": "Nhập giá của bạn"
 }
