add function shipping in onbording

--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -37,12 +37,22 @@
   "youWant": "You are wanting",
   "product": "Product",
   "priceRange": "Price range",
-  "criteria": "Criteria",
+  "address": "Address",
+  "delivery": "Delivery",
   "yourEmail": "Your email",
   "alertCheckMail": "You have successfully created the link, please check your email again",
   "time": "Time:",
   "404NotFound": "Sorry, the page you are looking for does not exist.",
   "goBackHome": "Go back to the home page",
   "oneMinute": "You have one minute left to talk to me!",
-  "enterPrice": "Enter your price"
+  "enterPrice": "Enter your price",
+  "placeholderAddress": "Your Address",
+  "questionYourAddress": "Please fill in your complete address in the box below.",
+  "chooseShipping" : "Choose shipping method",
+  "supportedDelivery": "Delivery support available",
+  "notSupportedDelivery": "Delivery is not supported",
+  "yes": "Yes",
+  "no": "No",
+  "confirmDeal": "Confirm deal",
+  "": "Enter your phone number"
 }
