--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -37,12 +37,22 @@
   "youWant": "Bạn đang muốn",
   "product": "Sản phẩm",
   "priceRange": "Khoảng giá",
-  "criteria": "Tiêu chí",
+  "address": "Địa chỉ",
+  "delivery": "Vận chuyển",
   "yourEmail": "Email của bạn",
   "alertCheckMail": "Bạn đã tạo link thành công, vui lòng kiểm tra lại email",
   "time": "Thời gian:",
   "404NotFound": "Xin lỗi, trang bạn đang tìm kiếm không tồn tại.",
   "goBackHome": "Quay lại trang chủ",
   "oneMinute": "Bạn còn một phút để nói chuyện với tôi!",
-  "enterPrice": "Nhập giá của bạn"
+  "enterPrice": "Nhập giá của bạn",
+  "placeholderAddress": "Địa chỉ của bạn",
+  "questionYourAddress": "Vui lòng điền đầy đủ địa chỉ của bạn vào ô bên dưới.",
+  "chooseShipping" : "Chọn phương thức vận chuyển ",
+  "supportedDelivery": "Có hỗ trợ giao hàng",
+  "notSupportedDelivery": "không hỗ trợ giao hàng",
+  "yes": "Có",
+  "no": "Không",
+  "confirmDeal": "Chốt đơn",
+  "phoneNumber": "Nhập số điện thoại của bạn"
 }
