--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -54,5 +54,6 @@
   "yes": "Có",
   "no": "Không",
   "confirmDeal": "Chốt đơn",
-  "phoneNumber": "Nhập số điện thoại của bạn"
+  "phoneNumber": "Nhập số điện thoại của bạn",
+  "negotiation": "Mời bạn trả giá"
 }
