fix bug input price

--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -9,7 +9,7 @@
   "chooseHere": "Chọn ở đây",
   "sellSomething": "Bán một số thứ",
   "buySomething": "Mua một số thứ",
-  "callToAction": "Kêu gọi hành động",
+  "callToAction": "SoCool - Hành trình bắt đầu từ đây, hãy cùng chúng tôi tỏa sáng!",
   "questionHelp": "Tôi có thể giúp gì được cho bạn?",
   "questionSell": "Bạn muốn bán sản phẩm nào?",
   "questionBuy": "Bạn muốn mua sản phẩm nào?",
