--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -9,7 +9,7 @@
   "chooseHere": "Choose here",
   "sellSomething": "Sell something",
   "buySomething": "Buy something",
-  "callToAction": "Call to Action",
+  "callToAction": "SoCool - The journey starts here, let's shine together!",
   "questionHelp": "What do you want me to help?",
   "questionSell": "Which product do you want to sell?",
   "questionBuy": "Which product do you want to buy?",
