implement api create sample title product

--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -55,5 +55,6 @@
   "no": "No",
   "confirmDeal": "Confirm deal",
   "phoneNumber": "Enter your phone number",
-  "negotiation": "Please make a negotiation"
+  "negotiation": "Please make a negotiation",
+  "sampleSuggestProduct": "This is the sample we suggest, would you like to try it right away?"
 }
