--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -55,5 +55,6 @@
   "no": "Không",
   "confirmDeal": "Chốt đơn",
   "phoneNumber": "Nhập số điện thoại của bạn",
-  "negotiation": "Mời bạn trả giá"
+  "negotiation": "Mời bạn trả giá",
+  "sampleSuggestProduct": "Đây là mẫu chúng tôi đề xuất, bạn có muốn dùng thử ngay không?"
 }
