--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -56,5 +56,6 @@
   "confirmDeal": "Chốt đơn",
   "phoneNumber": "Nhập số điện thoại của bạn",
   "negotiation": "Mời bạn trả giá",
-  "sampleSuggestProduct": "Đây là mẫu chúng tôi đề xuất, bạn có muốn dùng thử ngay không?"
+  "sampleSuggestProduct": "Đây là mẫu chúng tôi đề xuất, bạn có muốn dùng thử ngay không?",
+  "tryAgain": "Có lỗi xảy ra, bạn vui lòng thử lại"
 }
