add ai suggest price

--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -57,5 +57,7 @@
   "phoneNumber": "Enter your phone number",
   "negotiation": "Please make a negotiation",
   "sampleSuggestProduct": "This is the sample we suggest, would you like to try it right away?",
-  "tryAgain": "An error occurred, please try again."
+  "tryAgain": "An error occurred, please try again.",
+  "currentProductPrice": "current {{productName}} price",
+  "currentMarket": "The current market reference price range fluctuates."
 }
