--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -9,15 +9,15 @@
   "chooseHere": "Chọn ở đây",
   "sellSomething": "Bán một số thứ",
   "buySomething": "Mua một số thứ",
-  "callToAction": "SoCool - Hành trình bắt đầu từ đây, hãy cùng chúng tôi tỏa sáng!",
+  "callToAction": "SoCool - Tạo trợ lý AI chỉ bằng vài cú click chuột",
   "questionHelp": "Tôi có thể giúp gì được cho bạn?",
   "questionSell": "Bạn muốn bán sản phẩm nào?",
   "questionBuy": "Bạn muốn mua sản phẩm nào?",
   "questionPrice": "Bạn hài lòng với mức giá nào?",
   "questionCriteriaBuy":"Bạn có tiêu chí nào về người mua mà tôi cần chú ý không ? hãy liệt kê ra",
   "questionCriteriaSell": "Bạn có tiêu chí nào về người bán mà tôi cần chú ý không? hãy liệt kê ra",
-  "writeSomethingHere": "Hãy nhập gì đó ở đây ?",
-  "writeNumberHere": "Hãy nhập số ở đây?",
+  "writeSomethingHere": "Hãy nhập gì đó ở đây? \nVí dụ: iPhone 15 Pro Max mạ vàng 24k, phiên bản 512G, chưa đập hộp...",
+  "writeNumberHere": "Hãy nhập giá tiền ở đây?",
   "inputEmailAddress": "Hãy nhập địa chỉ email của bạn để nhận liên kết!",
   "emailHere": "Hãy nhập email của bạn ở đây",
   "sureInformation": "Bạn có chắc chắn 100% với thông tin bạn nhập vào không ?",
@@ -46,7 +46,7 @@
   "goBackHome": "Quay lại trang chủ",
   "oneMinute": "Bạn còn một phút để nói chuyện với tôi!",
   "enterPrice": "Nhập giá của bạn",
-  "placeholderAddress": "Địa chỉ của bạn",
+  "placeholderAddress": "Địa chỉ của bạn \nVí dụ: Số nhà 123, quận Thanh Xuân, Thành phố Hà Nội, Việt Nam",
   "questionYourAddress": "Vui lòng điền đầy đủ địa chỉ của bạn vào ô bên dưới.",
   "chooseShipping" : "Chọn phương thức vận chuyển ",
   "supportedDelivery": "Có hỗ trợ giao hàng",
@@ -59,5 +59,8 @@
   "sampleSuggestProduct": "Đây là mẫu chúng tôi đề xuất, bạn có muốn dùng thử ngay không?",
   "tryAgain": "Có lỗi xảy ra, bạn vui lòng thử lại",
   "currentProductPrice": "Giá {{productName}} hiện tại",
-  "currentMarket": "Khoảng giá tham khảo thị trường hiện tại dao động."
+  "currentMarket": "Khoảng giá tham khảo thị trường hiện tại dao động.",
+  "tryAgain8Hour": "Bạn đã xác nhận một lần, vui lòng đợi 8 giờ để tiếp tục sử dụng liên kết này",
+  "loginSuccessful": "Đăng nhập thành công!",
+  "invalidOTP": "Sai OTP"
 }
