--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -9,15 +9,15 @@
   "chooseHere": "Choose here",
   "sellSomething": "Sell something",
   "buySomething": "Buy something",
-  "callToAction": "SoCool - The journey starts here, let's shine together!",
+  "callToAction": "SoCool - Create an AI assistant with just a few clicks",
   "questionHelp": "What do you want me to help?",
   "questionSell": "Which product do you want to sell?",
   "questionBuy": "Which product do you want to buy?",
   "questionPrice": "Which price are you happy with?",
   "questionCriteriaBuy":"Do you have any criteria for buyers that I need to pay attention to? please list out",
   "questionCriteriaSell": "Do you have any seller criteria I should pay attention to? Please list them out",
-  "writeSomethingHere": "Write something here?",
-  "writeNumberHere": "Write number here ?",
+  "writeSomethingHere": "Write something here? \nExample: iPhone 15 Pro Max Pure Gold Edition, version 512G, unboxed...",
+  "writeNumberHere": "Please enter price here?",
   "inputEmailAddress": "Please input your email address to receive your custom link!",
   "emailHere": "your email here",
   "sureInformation": "Are you sure 100% with information you input?",
@@ -46,7 +46,7 @@
   "goBackHome": "Go back to the home page",
   "oneMinute": "You have one minute left to talk to me!",
   "enterPrice": "Enter your price",
-  "placeholderAddress": "Your Address",
+  "placeholderAddress": "Your Address \nExample: 123 Main Street, Apartment 4B, Springfield, IL 62701, USA",
   "questionYourAddress": "Please fill in your complete address in the box below.",
   "chooseShipping" : "Choose shipping method",
   "supportedDelivery": "Delivery support available",
@@ -59,5 +59,8 @@
   "sampleSuggestProduct": "This is the sample we suggest, would you like to try it right away?",
   "tryAgain": "An error occurred, please try again.",
   "currentProductPrice": "current {{productName}} price",
-  "currentMarket": "The current market reference price range fluctuates."
+  "currentMarket": "The current market reference price range fluctuates.",
+  "tryAgain8Hour": "You have already confirmed once, please wait 8 hours to continue using this link again",
+  "loginSuccessful": "Login successful!",
+  "invalidOTP": "Invalid OTP"
 }
