--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -62,5 +62,6 @@
   "currentMarket": "The current market reference price range fluctuates.",
   "tryAgain8Hour": "You have already confirmed once, please wait 8 hours to continue using this link again",
   "loginSuccessful": "Login successful!",
-  "invalidOTP": "Invalid OTP"
+  "invalidOTP": "Invalid OTP",
+  "pleaseAnotherEmail ": "You are the owner of this link, Please provide another email address to continue using."
 }
