--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -63,5 +63,7 @@
   "tryAgain8Hour": "You have already confirmed once, please wait 8 hours to continue using this link again",
   "loginSuccessful": "Login successful!",
   "invalidOTP": "Invalid OTP",
-  "pleaseAnotherEmail": "You are the owner of this link, Please provide another email address to continue using."
+  "pleaseAnotherEmail": "You are the owner of this link, Please provide another email address to continue using.",
+  "continueExperience": "Your chat time has ended. We are happy that you have used SoCool's services. Let's continue to experience more!",
+  "warningMaximumLink": "You have reached your maximum link creation limit for today"
 }
