--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -63,5 +63,7 @@
   "tryAgain8Hour": "Bạn đã xác nhận một lần, vui lòng đợi 8 giờ để tiếp tục sử dụng liên kết này",
   "loginSuccessful": "Đăng nhập thành công!",
   "invalidOTP": "Sai OTP",
-  "pleaseAnotherEmail": "Bạn là chủ sở hữu của liên kết này, Vui lòng cung cấp một địa chỉ email khác để tiếp tục sử dụng."
+  "pleaseAnotherEmail": "Bạn là chủ sở hữu của liên kết này, Vui lòng cung cấp một địa chỉ email khác để tiếp tục sử dụng.",
+  "continueExperience": "Thời gian trò chuyện của bạn đã kết thúc. Chúng tôi rất vui khi bạn đã sử dụng dịch vụ của SoCool. Hãy tiếp tục trải nghiệm thêm!",
+  "warningMaximumLink": "Bạn đã đạt đến giới hạn tạo liên kết tối đa cho ngày hôm nay"
 }
