fix ui onbording

--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -16,9 +16,11 @@
   "questionPrice": "Which price are you happy with?",
   "questionCriteriaBuy":"Do you have any criteria for buyers that I need to pay attention to? please list out",
   "questionCriteriaSell": "Do you have any seller criteria I should pay attention to? Please list them out",
-  "writeSomethingHere": "Write something here? \nExample: iPhone 15 Pro Max Pure Gold Edition, version 512G, unboxed...",
+  "writeSomethingHere": "Please enter the name and product type. Please describe specifically! \nFor example: 24k gold-plated iPhone 15 Pro Max, version 512G, still in original box...",
   "writeNumberHere": "Please enter price here?",
-  "inputEmailAddress": "Please input your email address to receive your custom link!",
+  "inputEmailAddress": "Please leave your email to receive: ",
+  "inputEmailAddressSell": "1 link for selling with AI assistant",
+  "inputEmailAddressBuy": "1 link for buying with AI assistant",
   "emailHere": "your email here",
   "sureInformation": "Are you sure 100% with information you input?",
   "yesOrNo": "Yes or No",
@@ -46,11 +48,12 @@
   "goBackHome": "Go back to the home page",
   "oneMinute": "You have one minute left to talk to me!",
   "enterPrice": "Enter your price",
-  "placeholderAddress": "Your Address \nExample: 123 Main Street, Apartment 4B, Springfield, IL 62701, USA",
-  "questionYourAddress": "Please fill in your complete address in the box below.",
-  "chooseShipping" : "Choose shipping method",
+  "placeholderAddress": "Can you tell us your address? \nExample: 123 Main Street, Apartment 4B, Springfield, IL 62701, USA",
+  "questionYourAddressSell": "If the buyer wants to come and see the product in person, please let me know your address.",
+  "questionYourAddressBuy": "If the seller wants to ship the product to you, please let me know your address.",
+  "chooseShipping" : "Can you help with deliveries?",
   "supportedDelivery": "Delivery support available",
-  "notSupportedDelivery": "Delivery is not supported",
+  "notSupportedDelivery": "No, just want to trade directly",
   "yes": "Yes",
   "no": "No",
   "confirmDeal": "Confirm deal",
@@ -68,5 +71,8 @@
   "warningMaximumLink": "You have reached your maximum link creation limit for today",
   "selectTemplate": "Select this template",
   "notSelected": "Not selected",
-  "changeTemplate": "Change the template"
+  "changeTemplate": "Change the template",
+  "questionCondition": "Could you please provide me with information regarding the condition of the product?",
+  "exampleCondition": "Product condition: has minor scratches, screen is original.\nIs it still under warranty?\nCan I test it before purchasing?"
+
 }
