--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -11,14 +11,16 @@
   "buySomething": "Mua một số thứ",
   "callToAction": "SoCool - Tạo trợ lý AI chỉ bằng vài cú click chuột",
   "questionHelp": "Tôi có thể giúp gì được cho bạn?",
-  "questionSell": "Bạn muốn bán sản phẩm nào?",
-  "questionBuy": "Bạn muốn mua sản phẩm nào?",
+  "questionSell": "Bạn đang muốn bán sản phẩm nào?",
+  "questionBuy": "Bạn đang muốn mua sản phẩm nào?",
   "questionPrice": "Bạn hài lòng với mức giá nào?",
   "questionCriteriaBuy":"Bạn có tiêu chí nào về người mua mà tôi cần chú ý không ? hãy liệt kê ra",
   "questionCriteriaSell": "Bạn có tiêu chí nào về người bán mà tôi cần chú ý không? hãy liệt kê ra",
-  "writeSomethingHere": "Hãy nhập gì đó ở đây? \nVí dụ: iPhone 15 Pro Max mạ vàng 24k, phiên bản 512G, chưa đập hộp...",
+  "writeSomethingHere": "Bạn hãy nhập tên, loại sản phẩm. Hãy mô tả cụ thể nhé! \nVí dụ: iPhone 15 Pro Max mạ vàng 24k, phiên bản 512G, còn nguyên hộp...",
   "writeNumberHere": "Hãy nhập giá tiền ở đây?",
-  "inputEmailAddress": "Hãy nhập địa chỉ email của bạn để nhận liên kết!",
+  "inputEmailAddress": "Hãy để lại email của bạn để nhận được: ",
+  "inputEmailAddressSell": "1 link bán hàng có kèm trợ lý AI",
+  "inputEmailAddressBuy": "1 link mua hàng có kèm trợ lý AI",
   "emailHere": "Hãy nhập email của bạn ở đây",
   "sureInformation": "Bạn có chắc chắn 100% với thông tin bạn nhập vào không ?",
   "yesOrNo": "Có hoặc Không",
@@ -27,7 +29,7 @@
   "pleaseCheckMail": "Vui lòng kiểm tra email để biết liên kết tùy chỉnh của bạn",
   "bestOfLuck": "Chúc bạn may mắn",
   "errorValidEmail": "Vui lòng nhập địa chỉ email hợp lệ",
-  "generateLink": "Tạo liên kết cho tôi!",
+  "generateLink": "Tạo link cho tôi!",
   "confirm": "Xác nhận",
   "required": "Trường này là bắt buộc.",
   "hereInformation": "Đây là các thông tin của bạn",
@@ -46,11 +48,12 @@
   "goBackHome": "Quay lại trang chủ",
   "oneMinute": "Bạn còn một phút để nói chuyện với tôi!",
   "enterPrice": "Nhập giá của bạn",
-  "placeholderAddress": "Địa chỉ của bạn \nVí dụ: Số nhà 123, quận Thanh Xuân, Thành phố Hà Nội, Việt Nam",
-  "questionYourAddress": "Vui lòng điền đầy đủ địa chỉ của bạn vào ô bên dưới.",
-  "chooseShipping" : "Chọn phương thức vận chuyển ",
+  "placeholderAddress": "Bạn có thể cho chúng tôi biết địa chỉ của mình không? \nVí dụ: Số nhà 123, quận Thanh Xuân, Thành phố Hà Nội, Việt Nam",
+  "questionYourAddressSell": "Nếu người mua muốn đến trực tiếp xem hàng, bạn vui lòng cho tôi biết địa chỉ của bạn",
+  "questionYourAddressBuy": "Nếu người bán muốn ship hàng cho bạn, vui lòng cho tôi biết địa chỉ của bạn",
+  "chooseShipping" : "Bạn có hỗ trợ giao hàng không?",
   "supportedDelivery": "Có hỗ trợ giao hàng",
-  "notSupportedDelivery": "không hỗ trợ giao hàng",
+  "notSupportedDelivery": "Không, chỉ muốn giao dịch trực tiếp",
   "yes": "Có",
   "no": "Không",
   "confirmDeal": "Chốt đơn",
@@ -68,5 +71,7 @@
   "warningMaximumLink": "Bạn đã đạt đến giới hạn tạo liên kết tối đa cho ngày hôm nay",
   "selectTemplate": "Chọn mẫu này",
   "notSelected": "Không chọn",
-  "changeTemplate": "Thay đổi mẫu"
+  "changeTemplate": "Thay đổi mẫu",
+  "questionCondition": "Cho mình xin thông tin về tình trạng của sản phẩm nhé?",
+  "exampleCondition": "Ví dụ: Tình trạng sản phẩm: hơi xước, màn nguyên zin,\nCòn bảo hành không?\nCó bao test không?"
 }
