change term inputaddress

--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -18,9 +18,9 @@
   "questionCriteriaSell": "Do you have any seller criteria I should pay attention to? Please list them out",
   "writeSomethingHere": "Please enter the name and product type. Please describe specifically! \nFor example: 24k gold-plated iPhone 15 Pro Max, version 512G, still in original box...",
   "writeNumberHere": "Please enter price here?",
-  "inputEmailAddress": "please share your email: ",
-  "inputEmailAddressSell": "1 link for selling with AI assistant",
-  "inputEmailAddressBuy": "1 link for buying with AI assistant",
+  "inputEmailAddress": "please share your email to receipt: ",
+  "inputEmailAddressSell": "A link with AI assistant to sell your product 😀",
+  "inputEmailAddressBuy": "A link with AI assistant to buy what you desire 😀",
   "emailHere": "your email here",
   "sureInformation": "Are you sure 100% with information you input?",
   "yesOrNo": "Yes or No",
