--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -19,8 +19,8 @@
   "writeSomethingHere": "Bạn hãy nhập tên, loại sản phẩm. Hãy mô tả cụ thể nhé! \nVí dụ: iPhone 15 Pro Max mạ vàng 24k, phiên bản 512G, còn nguyên hộp...",
   "writeNumberHere": "Hãy nhập giá tiền ở đây?",
   "inputEmailAddress": "Hãy để lại email của bạn để nhận được: ",
-  "inputEmailAddressSell": "1 link bán hàng có kèm trợ lý AI",
-  "inputEmailAddressBuy": "1 link mua hàng có kèm trợ lý AI",
+  "inputEmailAddressSell": "1 link bán hàng có kèm trợ lý AI 😀",
+  "inputEmailAddressBuy": "1 link mua hàng có kèm trợ lý AI 😀",
   "emailHere": "Hãy nhập email của bạn ở đây",
   "sureInformation": "Bạn có chắc chắn 100% với thông tin bạn nhập vào không ?",
   "yesOrNo": "Có hoặc Không",
