change thumbnail img

--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -18,7 +18,7 @@
   "questionCriteriaSell": "Do you have any seller criteria I should pay attention to? Please list them out",
   "writeSomethingHere": "Please enter the name and product type. Please describe specifically! \nFor example: 24k gold-plated iPhone 15 Pro Max, version 512G, still in original box...",
   "writeNumberHere": "Please enter price here?",
-  "inputEmailAddress": "please share your email to receipt: ",
+  "inputEmailAddress": "please share your email to receive: ",
   "inputEmailAddressSell": "A link with AI assistant to sell your product 😀",
   "inputEmailAddressBuy": "A link with AI assistant to buy what you desire 😀",
   "emailHere": "your email here",
