--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -19,8 +19,8 @@
   "writeSomethingHere": "Please enter the name and product type. Please describe specifically! \nFor example: 24k gold-plated iPhone 15 Pro Max, version 512G, still in original box...",
   "writeNumberHere": "Please enter price here?",
   "inputEmailAddress": "please share your email to receive: ",
-  "inputEmailAddressSell": "A link with AI assistant to sell your product 😀",
-  "inputEmailAddressBuy": "A link with AI assistant to buy what you desire 😀",
+  "inputEmailAddressSell": "A link with an AI assistant to sell your product 😀",
+  "inputEmailAddressBuy": "A link with an AI assistant to buy what you desire 😀",
   "emailHere": "your email here",
   "sureInformation": "Are you sure 100% with information you input?",
   "yesOrNo": "Yes or No",
@@ -51,14 +51,18 @@
   "placeholderAddress": "Can you tell us your address? \nExample: 123 Main Street, Apartment 4B, Springfield, IL 62701, USA",
   "questionYourAddressSell": "If the buyer wants to come and see the product in person, please let me know your address.",
   "questionYourAddressBuy": "If the seller wants to ship the product to you, please let me know your address.",
-  "chooseShipping" : "Can you help with deliveries?",
+  "chooseShippingSell" : "Can you help with deliveries?",
+  "chooseShippingBuy": "Do you need delivery support?",
   "supportedDelivery": "Delivery support available",
   "notSupportedDelivery": "No, just want to trade directly",
+  "supportedDeliveryBuy": "Yes, I need delivery support",
+  "notSupportedDeliveryBuy": "No, I will pick up by myself",
   "yes": "Yes",
   "no": "No",
   "confirmDeal": "Confirm deal",
   "phoneNumber": "Enter your phone number",
-  "negotiation": "Please make a negotiation",
+  "negotiationSell": "How much are you willing to pay?",
+  "negotiationBuy": "How much are you willing to sell?",
   "sampleSuggestProduct": "This is the sample we suggest, would you like to try it right away?",
   "tryAgain": "An error occurred, please try again.",
   "currentProductPrice": "current {{productName}} price",
@@ -74,5 +78,6 @@
   "changeTemplate": "Change the template",
   "questionCondition": "Could you please provide me with information regarding the condition of the product?",
   "exampleCondition": "Product condition: has minor scratches, screen is original.\nIs it still under warranty?\nCan I test it before purchasing?",
-  "startConversation": "To start the conversation, please provide your email."
+  "startConversation": "To start the conversation, please provide your email.",
+  "linkNotActive": "Link is not active"
 }
