--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -79,5 +79,5 @@
   "questionCondition": "Cho mình xin thông tin về tình trạng của sản phẩm nhé?",
   "exampleCondition": "Ví dụ: Tình trạng sản phẩm: hơi xước, màn nguyên zin,\nCòn bảo hành không?\nCó bao test không?",
   "startConversation": "Để bắt đầu cuộc trò chuyện, vui lòng cung cấp email của bạn.",
-  "linkNotActive": "Link không còn hoạt động"
+  "linkNotActive": "Bạn đang mở 1 trình duyệt mới trên đường link này, vì vậy trình duyệt hiện tại này sẽ được đóng."
 }
