--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -79,5 +79,7 @@
   "questionCondition": "Could you please provide me with information regarding the condition of the product?",
   "exampleCondition": "Product condition: has minor scratches, screen is original.\nIs it still under warranty?\nCan I test it before purchasing?",
   "startConversation": "To start the conversation, please provide your email.",
-  "linkNotActive": "You are opening a new session, so this session will be closed."
+  "linkNotActive": "You are opening a new session, so this session will be closed.",
+  "deletedLinkTitle": "Link successfully deleted! We hope you continue to have a great experience with Socool.",
+  "backToHome": "Back to home"
 }
