--- a/src/language/EN-translate.json
+++ b/src/language/EN-translate.json
@@ -81,5 +81,6 @@
   "startConversation": "To start the conversation, please provide your email.",
   "linkNotActive": "You are opening a new session, so this session will be closed.",
   "deletedLinkTitle": "Link successfully deleted! We hope you continue to have a great experience with Socool.",
-  "backToHome": "Back to home"
+  "backToHome": "Back to home",
+  "thanksSharing": "Thank you for sharing this information. Wishing you even greater success in finding potential customers with our SoCool AI!"
 }
