--- a/src/language/VN-translate.json
+++ b/src/language/VN-translate.json
@@ -82,5 +82,6 @@
   "linkNotActive": "Bạn đang mở 1 trình duyệt mới trên đường link này, vì vậy trình duyệt hiện tại này sẽ được đóng.",
   "deletedLinkTitle": "Xóa liên kết thành công! Hy vọng bạn tiếp tục có trải nghiệm tuyệt vời với Socool.",
   "backToHome": "Trở về trang chủ",
-  "thanksSharing": "Cảm ơn bạn đã chia sẻ thông tin này. Chúc bạn thành công hơn nữa trong việc tìm kiếm khách hàng tiềm năng với SoCool AI của chúng tôi!"
+  "thanksSharing": "Cảm ơn bạn đã chia sẻ thông tin này. Chúc bạn thành công hơn nữa trong việc tìm kiếm khách hàng tiềm năng với SoCool AI của chúng tôi!",
+  "linkHasExpired": "Xin lỗi, liên kết này đã hết hạn. Vui lòng thử lại sau. Cảm ơn bạn đã thông cảm!"
 }
